# sous-bot

./: .env.example  .gitignore  CLAUDE.md  PROMPTS.md  README.md  TASKS.md  pyproject.toml
config/: settings.yaml
docs/: steering.md
scripts/: run_demo.py  run_viewer.py
sim/: grocery_env.py
src/sous_bot/api/: main.py  schemas.py
src/sous_bot/planner/: engine.py  prompts.py  search.py
src/sous_bot/robotics/: controller.py
src/sous_bot/robotics/adapters/: base.py  real.py  simulation.py
src/sous_bot/vision/: __init__.py  camera.py  detector.py  inventory.py  recipe_search.py  routes.py
src/sous_bot/voice/: __init__.py  __main__.py  assistant.py  pipeline.py  recorder.py  routes.py  stt.py  tts.py
tests/: test_integration.py  test_planner.py  test_robotics.py  test_vision.py
