[project]
name = "nebius-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.23",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
