[project]
name = "nebius-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tavily-python>=0.7.23",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
