[project]
name = "nebius-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "fastapi>=0.135.1",
    "glfw>=2.10.0",
    "langchain>=1.2.12",
    "mujoco>=3.2.0,<3.7.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "openai-whisper>=20250625",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "robot-descriptions>=1.23.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tavily-python>=0.7.23",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sous_bot", "sim"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
